# spotted-checker

./: .gitignore  CMakeLists.txt  Makefile  README.md  cross_product.cc  kripke-format
inc/: aliases.h  aux.h  checker.h  cross_product.h  cross_state.h  cross_unicity_table.h  state_template.h
inc/model_abstract/: iterator.h  kripke.h  state.h
inc/model_empty/: iterator.h  kripke.h  state.h  state_vars.h
inc/model_example/: iterator.h  kripke.h  state.h  state_vars.h
inc/model_template/: iterator.h  kripke.h  state.h  state_template.h  state_vars.h
inc/peterson/: iterator.h  kripke.h  peterson_iterator.h  peterson_state.h  state.h
kripkes/: _kripke-format  kripke-door
main/: main.cc
src/: checker.cc  cross_product.cc  state_template.cc
src/model_abstract/: state.cc
src/model_empty/: iterator.cc  kripke.cc  state.cc
src/model_example/: iterator.cc  kripke.cc  state.cc
src/model_template/: state.cc
src/peterson/: iterator.cc  state.cc
